@@ -122,7 +122,7 @@ main ()
     doc_s.add_schema ("http://www.codesynthesis.com/library", "library.xsd");
 
     catalog_s.pre (cat);
-    doc_s.serialize (std::cout);
+    doc_s.serialize (std::cout, xml_schema::document_simpl::pretty_print);
     catalog_s.post ();
   }
   catch (const xml_schema::serializer_exception& e)
