@@ -102,7 +102,7 @@ main ()
     doc_s.add_no_namespace_schema ("supermen.xsd");
 
     supermen_s.pre (sm);
-    doc_s.serialize (std::cout);
+    doc_s.serialize (std::cout, xml_schema::document_simpl::pretty_print);
     supermen_s.post ();
   }
   catch (const xml_schema::serializer_exception& e)
