@@ -120,7 +120,7 @@ main ()
       doc_s.add_no_namespace_schema ("supermen.xsd");
 
       ps->pre (p);
-      doc_s.serialize (std::cout);
+      doc_s.serialize (std::cout, xml_schema::document_simpl::pretty_print);
       ps->post ();
 
       std::cout << endl
